<resources>
    <string name="app_name">MakeAForm</string>
    <string name="registration_form">Registration Form</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="submit">Submit</string>
    <string name="thanks_for_signing_up">Thanks for Signing Up</string>
    <string name="date_hint">Day of birth (MM/DD/YYYY)</string>
    <string name="author_name">Fernandez, Jose</string>
</resources>